--- a/Application/Moocycle/public/css/home.css
+++ b/Application/Moocycle/public/css/home.css
@@ -1,15 +1,74 @@
+/* Importation de la police */
 @font-face {
     font-family: 'Dolphin-Sans';
     src: url('/fonts/Monoround.otf'); /* Reference the font directly from the public directory */
 }
 
-.title{
-    font-family: 'Dolphin-Sans';
-    color: rgb(255, 157, 211);
-    font-size: 50px;
+/* Styles pour le corps */
+body {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    font-family: Arial, sans-serif;
+    text-align: center;
+    background-color: rgb(255, 255, 245);
 }
-.undertitle{
+
+/* Styles pour le titre */
+.title {
     font-family: 'Dolphin-Sans';
-    color: rgb(255, 157, 211);
+    color: rgba(231, 157, 188, 255);
+    font-size: 40px;
+    margin-bottom: 30px; /* Plus d'espace sous le titre */
+    margin-top: 30px;
+}
+#clock {
+    font-family: 'Dolphin-Sans';
+    color: rgba(231, 157, 188, 255);
+    font-size: 50px;
+    margin: 10px;
+    position: absolute; /* Positionnement absolu */
+    top: 10px; /* Ajuste la hauteur depuis le haut */
+    right: 10px; /* Aligne à droite avec un petit espace */
+    text-align: right; /* Assure l'alignement du texte */
+}
+
+/* Centrer le logo */
+#logo {
+    text-align: left;
+    position: absolute;
+    margin :10px;
+}
+#logo img {
+    width: 6%;
+}
+
+/* Styles pour le sous-titre */
+.undertitle {
+    font-family: 'Dolphin-Sans';
+    color: rgb(231, 157, 188);
     font-size: 25px;
+    margin-top: 100px; /* Ajoute un espace au-dessus du sous-titre */
+    margin-bottom: 40px; /* Espacement inférieur */
+}
+
+/* Pied de page */
+#footer {
+    font-family: 'Dolphin-Sans';
+    margin-top: auto;
+    width: 100%;
+    text-align: center;
+    background-color: rgb(158, 83, 114);
+    color: white;
+    padding: 10px 0;
+}
+
+#copyright p {
+    margin: 0;
+}
+
+#socials {
+    margin-top: 10px;
 }
