--- a/Application/Moocycle/public/css/home.css
+++ b/Application/Moocycle/public/css/home.css
@@ -1,7 +1,7 @@
 /* Importation de la police */
 @font-face {
     font-family: 'Dolphin-Sans';
-    src: url('/fonts/Monoround.otf'); /* Reference the font directly from the public directory */
+    src: url('/fonts/AlteHaasGroteskBold.ttf'); /* Reference the font directly from the public directory */
 }
 @keyframes shake {
     0%, 100% {
@@ -42,9 +42,9 @@ body {
     width: 350px; /* Largeur du bouton */
     height: 350px; /* Hauteur du bouton (assure la forme carrée) */
     font-size: 80px; /* Taille du texte dans les boutons */
-    color: rgb(169,76,248);
+    color: blueviolet;
     background-color: white; /* Couleur de fond des boutons */
-    border: 2px solid rgb(169,76,248); /* Bordure autour des boutons */
+    border: 2px solid blueviolet; /* Bordure autour des boutons */
     border-radius: 16px; /* Coins arrondis des boutons */
     cursor: pointer; /* Curseur en forme de main sur les boutons */
     display: flex;
@@ -60,7 +60,7 @@ body {
 
 /* Effet de survol sur les boutons */
 .mainButtons button:hover {
-    background-color: rgb(155, 41, 255); /* Change la couleur de fond au survol */
+    background-color: blueviolet; /* Change la couleur de fond au survol */
     color: white; /* Change la couleur du texte au survol */
 }
 
@@ -72,14 +72,14 @@ body {
 /* Styles pour le titre */
 .title {
     font-family: 'Dolphin-Sans';
-    color: rgb(169,76,248);
+    color: blueviolet;
     font-size: 40px;
     margin-bottom: 100px; /* Plus d'espace sous le titre */
     margin-top: 30px;
 }
 #clock {
     font-family: 'Dolphin-Sans';
-    color: rgb(169,76,248);
+    color: blueviolet;
     font-size: 30px;
     margin: 10px;
     position: absolute; /* Positionnement absolu */
@@ -101,7 +101,7 @@ body {
 /* Styles pour le sous-titre */
 .undertitle {
     font-family: 'Dolphin-Sans';
-    color: rgb(169,76,248);
+    color: blueviolet;
     font-size: 25px;
     margin-top: 100px; /* Ajoute un espace au-dessus du sous-titre */
     margin-bottom: 40px; /* Espacement inférieur */
