--- a/Application/Moocycle/public/css/burger.css
+++ b/Application/Moocycle/public/css/burger.css
@@ -20,10 +20,15 @@
     padding: 0;
     margin-top: 80px;
 }
-.off-screen-menu li{
+.off-screen-menu li {
+    text-align: center;
     transition: 0.25s;
     height: 80px;
+    display: flex;
+    align-items: center;  /* Centre le contenu verticalement */
+    justify-content: center;  /* Centre le contenu horizontalement */
 }
+
 .off-screen-menu li:hover{
     transition: 0.25s;
     background-color: rgb(115, 36, 189);
