--- a/Application/Moocycle/public/css/cows.css
+++ b/Application/Moocycle/public/css/cows.css
@@ -26,6 +26,18 @@ body {
     flex-wrap: wrap; /* Permet de passer à une nouvelle ligne */
     justify-content: center; /* Centre les éléments horizontalement */
     gap: 0; /* Retirer le gap si les marges gèrent l'espacement */
+    animation: slideIn 0.6s ease-in-out;  /* Effet d'animation */
+}
+/* Animation subtile */
+@keyframes slideIn {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 /* Style des éléments de la liste (cartes de vaches) */
 .content ul {
