--- a/Application/Moocycle/public/css/burger.css
+++ b/Application/Moocycle/public/css/burger.css
@@ -5,7 +5,7 @@
 /* off-screen-menu */
 .off-screen-menu {
     font-family: 'Dolphin-Sans';
-    background-color: blueviolet;
+    background: linear-gradient(135deg, #6a5acd, #8a2be2);
     height: 100vh;
     width: 100%;
     max-width: 450px;
