--- a/Application/Moocycle/public/css/healthcows.css
+++ b/Application/Moocycle/public/css/healthcows.css
@@ -131,7 +131,7 @@ body {
     margin-top: 10px; /* Marge au-dessus des boutons */
 }
 
-#lactation-btn{
+.lactation-btn{
     background: linear-gradient(135deg, #ffffff, #dadbc1);
     color: black; /* Couleur du texte */
     font-size: 14px; /* Taille de la police */
@@ -142,7 +142,7 @@ body {
     transition: background-color 0.3s ease; /* Transition pour un effet au survol */
 }
 
-#chaleur-btn {
+.chaleur-btn {
     background: linear-gradient(135deg, #ff9100, #e30000);
     color: white; /* Couleur du texte */
     font-size: 14px; /* Taille de la police */
@@ -152,18 +152,16 @@ body {
     cursor: pointer; /* Change le curseur pour indiquer un bouton cliquable */
     transition: background-color 0.3s ease; /* Transition pour un effet au survol */
 }
-#lactation-btn:hover{
+.lactation-btn:hover{
     transition: 0.3s;
-    transform: scale(1.01);  /* Agrandissement lors du survol */
-    box-shadow: 0 10px 30px rgba(255, 255, 255, 0.518); /* Ombre plus marquée au survol */
+    box-shadow: 0 10px 30px rgba(255, 255, 255, 0.863); /* Ombre plus marquée au survol */
 }
-#chaleur-btn:hover {
+.chaleur-btn:hover {
     transition: 0.3s;
-    transform: scale(1.01);  /* Agrandissement lors du survol */
     box-shadow: 0 10px 30px rgba(255, 55, 0, 0.518); /* Ombre plus marquée au survol */
 }
 
-#lactation-btn:focus, #chaleur-btn:focus {
+.lactation-btn:focus, #chaleur-btn:focus {
     outline: none; /* Retire la bordure par défaut quand le bouton est focus */
 }
 /* Pour les écrans petits et tablettes */
