--- a/Application/Moocycle/public/css/healthcows.css
+++ b/Application/Moocycle/public/css/healthcows.css
@@ -58,7 +58,6 @@ body {
     text-align: left;
     width: calc((100% - 4 * 20px) / 5);
     box-sizing: border-box;
-    height: 200px;
     overflow: hidden;
     margin: 5px;
 }
@@ -116,7 +115,7 @@ body {
     text-align: left;
     width: calc((100% - 4 * 20px) / 5);
     box-sizing: border-box;
-    height: 200px;
+    height: fit-content;
     overflow: hidden;
     margin: 5px;
 }
