--- a/Application/Moocycle/public/css/burger.css
+++ b/Application/Moocycle/public/css/burger.css
@@ -28,6 +28,7 @@
     display: flex;
     align-items: center;  /* Centre le contenu verticalement */
     justify-content: center;  /* Centre le contenu horizontalement */
+    position: relative;  /* Nécessaire pour garantir que le <a> peut prendre la hauteur complète */
 }
 
 .off-screen-menu li:hover{
@@ -35,10 +36,16 @@
     background-color: rgb(115, 36, 189);
     cursor: pointer;
 }
-.off-screen-menu a{
+.off-screen-menu a {
+    display: block;  /* Permet à l'élément <a> de prendre toute la largeur et la hauteur */
+    width: 100%;
+    height: 100%;     /* Prend toute la hauteur du <li> */
     color: white;
     text-decoration: none;
-    width: 100%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;  /* Centre le texte à l'intérieur du <a> */
 }
 .off-screen-menu.active {
     left: 0; /* Fait apparaître le menu à gauche */
